--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "tsc && vite build",
         "serve": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        "deploy": "gh-pages -d dist",
         "test": "vitest",
         "test:coverage": "vitest run --coverage --watch=false",
         "storybook": "storybook dev -p 6006",
@@ -60,7 +60,7 @@
         "@vitejs/plugin-react-swc": "3.7.0",
         "@vitest/coverage-v8": "2.0.5",
         "eslint-plugin-storybook": "0.8.0",
-        "gh-pages": "5.0.0",
+        "gh-pages": "^5.0.0",
         "jsdom": "24.1.1",
         "pokenode-ts": "1.20.0",
         "react": "18.3.1",
