--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "react-router-dom": "6.26.0",
         "sass": "1.77.8",
         "storybook": "8.2.7",
-        "tsx": "^4.19.1",
+        "tsx": "4.19.1",
         "typescript": "5.5.4",
         "uuid": "9.0.1",
         "vite": "5.3.5",
