--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "vite",
         "build": "tsc && vite build",
         "serve": "vite preview",
-        "predeploy": "npm run build --base=/pokelingo/test",
+        "predeploy": "npm run build -- --config vite.config.test-env.ts",
         "deploy": "gh-pages --dist dist --dest test-env",
         "test": "vitest",
         "test:coverage": "vitest run --coverage --watch=false",
