--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "tsc && vite build",
         "serve": "vite preview",
         "predeploy": "npm run build -- --config vite.config.test-env.ts",
-        "deploy": "gh-pages --dist dist --dest ${TEST_ENV_NAME:-test-env}",
+        "deploy": "gh-pages --dist dist --dest env/${TEST_ENV_NAME:-test}",
         "test": "vitest",
         "test:coverage": "vitest run --coverage --watch=false",
         "storybook": "storybook dev -p 6006",
