--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,10 +31,15 @@ jobs:
       - run: npm install
       - run: npm run build
 
+      - name: Set branch deploy folder
+        if: github.ref != 'refs/heads/master'
+        env:
+          DEPLOY_DIR: branch/${{ github.ref_name }}
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: gh-pages
+          destination_dir: ${{ env.DEPLOY_DIR }}
