--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -35,4 +35,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: gh-pages
-          destination_dir: ${{ github.ref != 'refs/heads/master' && 'branch/${{ github.ref_name }}' || '' }}
+          destination_dir: ${{ github.ref != 'refs/heads/master' && format('branch/{0}', github.ref_name) || '' }}
