--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm run build
 
       - name: Deploy
-        uses: .github/workflows/gh-pages-main
+        uses: ./.github/workflows/gh-pages-main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
