--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm run build
 
       - name: Deploy
-        uses: mark-poussard/actions-gh-pages@main
+        uses: mark-poussard/actions-gh-pages@3353c378fc6a7224e255011f0fb80070320cf8c0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
