--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,7 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-  pull_request:
+    branches-ignore:
+      - gh-pages
 
 jobs:
   deploy:
@@ -30,9 +31,10 @@ jobs:
       - run: npm run build
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: mark-poussard/actions-gh-pages@v4.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: gh-pages
           destination_dir: ${{ github.ref != 'refs/heads/master' && format('branch/{0}', github.ref_name) || '' }}
+          keep_target_files: env,branch
