--- a/.github/workflows/gh-pages-prune-branch.yml
+++ b/.github/workflows/gh-pages-prune-branch.yml
@@ -1,4 +1,4 @@
-name: Remove branch deployments from GitHub Pages on branch deletion
+name: GitHub Pages - Prune deleted branch
 
 # Ref https://docs.github.com/en/webhooks/webhook-events-and-payloads#delete
 
@@ -18,7 +18,8 @@ jobs:
         with:
           ref: gh-pages
 
-      - run: rm -r -- branch/${{ github.event.ref }}
-      - run: git add -A
+      - run: git rm -r -- branch/${{ github.event.ref }}
+      - run: git config --global user.email "${{ github.actor }}@@users.noreply.github.com"
+      - run: git config --global user.name "${{ github.actor }}"
       - run: git commit -m "Pruning deleted '${{ github.event.ref }}' branch"
       - run: git push
