--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,6 +5,9 @@ on:
     branches-ignore:
       - gh-pages
 
+env:
+  BRANCH_NAME: ${{ github.ref_name }}
+
 jobs:
   deploy:
     if: github.event.deleted == false
@@ -34,7 +37,7 @@ jobs:
         run: npm run build
 
       - if: ${{ github.ref != 'refs/heads/master' }}
-        run: BRANCH_NAME={{ github.ref_name }} npm run build -- --config vite.config.branch.ts
+        run: npm run build -- --config vite.config.branch.ts
 
       - name: Deploy
         uses: mark-poussard/actions-gh-pages@v4.1.1
